bugfix: make dropdown overflow visible in create record

--- a/app/pages/MyDomain/my-domain.scss
+++ b/app/pages/MyDomain/my-domain.scss
@@ -265,6 +265,8 @@
     }
 
     &__record-type-dropdown {
+      overflow: visible;
+      
       .dropdown {
         align-self: center;
 
